# pdf-flipbook-animator-commercial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_SETUP.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  FEATURE_REALISTIC_ANIMATION.md  GETTING_STARTED.md  LICENSE  MOBILE_TESTING.md  NEXT_STEPS.md  OUTPUT_USAGE_GUIDE.md  README.md  SECURITY.md  build_executable.py  build_windows.spec  index.html  links_data.json  mkdocs.yml  project_structure.txt  pyproject.toml  toc_data.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-release.yml  ci.yml  deploy-pages.yml  docs.yml  release.yml
css/: style.css
docs/: changelog.md  contributing.md  index.md  installation.md  quickstart.md
docs/usage/: basic.md
examples/: README.md
js/: flipbook.js
output/demo_fixed/: index.html
output/demo_hq/js/: flipbook.js
output/demo_quality_test/js/: flipbook.js
output/mobile_demo_3d/css/: style.css
output/mobile_demo_3d/js/: flipbook.js
output/mobile_demo_3d_fixed/css/: style.css
output/realistic_demo/css/: style.css
output/realistic_demo/js/: flipbook.js
output/realistic_demo_250dpi/: index.html
output/realistic_demo_250dpi/css/: style.css
output/test_crossfade/js/: flipbook.js
output/test_current/js/: flipbook.js
output/test_fixed/js/: flipbook.js
output/test_index_page5/: index.html
output/test_index_page5/css/: style.css
output/test_no_expansion/js/: flipbook.js
output/test_no_index/: index.html
output/test_no_index/js/: flipbook.js
output/test_reverted/css/: style.css
output/test_smooth/: index.html
output/test_smooth/js/: flipbook.js
scripts/: README.md
src/pdf_flipbook_animator/: __init__.py  __main__.py  cli.py  config.py
src/pdf_flipbook_animator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdf_flipbook_animator/core/: __init__.py  converter.py  generator.py
src/pdf_flipbook_animator/templates/js/: flipbook_3d_css.js  flipbook_realistic.js  flipbook_simple.js
src/pdf_flipbook_animator/utils/: __init__.py  image.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_converter.py  test_generator.py  test_utils.py
